--- a/src/Componentes/Body/Body.css
+++ b/src/Componentes/Body/Body.css
@@ -3,9 +3,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid;
+    width: 99vw;
+    height: 50vh;
     background-color: rgba(0, 0, 0, 0.9);
-
 }
 
 #body_imagen{
