--- a/src/Componentes/Botones/Boton.css
+++ b/src/Componentes/Botones/Boton.css
@@ -16,6 +16,7 @@
     animation-duration: 1s;
     animation-iteration-count: infinite;
     transform: scale(1.1);
+    cursor: grab;
 }
 
 @keyframes interactuar {
