--- a/src/Componentes/Header/Header.css
+++ b/src/Componentes/Header/Header.css
@@ -1,10 +1,17 @@
+.Header-contenedor{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 99vw;
+}
 .header_titulo-imagen{
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
     align-items: center;
-    margin-top: 5%;
-    box-shadow: gray 5px;
+    margin-top: 2%;
     gap: 40px;
 }
 
@@ -45,5 +52,4 @@
     left: 25px;
     width: 150px;
     height: 150px;
-    box-shadow: rgb(238, 222, 222) 1px 2px;
 }
